--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "(4200, 12)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
        "      <th>BEDS</th>\n",
        "      <th>BATH</th>\n",
        "      <th>PROPERTYSQFT</th>\n",
-       "      <th>STREET_NAME</th>\n",
+       "      <th>borough</th>\n",
        "      <th>PROPERTY_CATEGORY</th>\n",
        "      <th>TYPE</th>\n",
        "      <th>SUBLOCALITY_ext</th>\n",
@@ -588,7 +588,7 @@
        "</div>"
       ],
       "text/plain": [
-       "       PRICE  BEDS       BATH  PROPERTYSQFT       STREET_NAME  \\\n",
+       "       PRICE  BEDS       BATH  PROPERTYSQFT           borough  \\\n",
        "0     315000     2   2.000000        1400.0  East 55th Street   \n",
        "1  195000000     7  10.000000       17545.0          New York   \n",
        "2     260000     4   2.000000        2015.0     Staten Island   \n",
@@ -610,7 +610,7 @@
        "4  new york  40.767224 -73.969856  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
        "      <th>BEDS</th>\n",
        "      <th>BATH</th>\n",
        "      <th>PROPERTYSQFT</th>\n",
-       "      <th>STREET_NAME</th>\n",
+       "      <th>borough</th>\n",
        "      <th>PROPERTY_CATEGORY</th>\n",
        "      <th>TYPE</th>\n",
        "      <th>SUBLOCALITY_ext</th>\n",
@@ -747,7 +747,7 @@
        "</div>"
       ],
       "text/plain": [
-       "       PRICE  BEDS       BATH  PROPERTYSQFT       STREET_NAME  \\\n",
+       "       PRICE  BEDS       BATH  PROPERTYSQFT           borough  \\\n",
        "0     315000     2   2.000000        1400.0  East 55th Street   \n",
        "1  195000000     7  10.000000       17545.0          New York   \n",
        "2     260000     4   2.000000        2015.0     Staten Island   \n",
@@ -769,7 +769,7 @@
        "4  40.767224 -73.969856     3880.070547  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
        "BEDS                   0\n",
        "BATH                   0\n",
        "PROPERTYSQFT           0\n",
-       "STREET_NAME            0\n",
+       "borough                0\n",
        "PROPERTY_CATEGORY    641\n",
        "TYPE                   0\n",
        "SUBLOCALITY_ext        0\n",
@@ -835,7 +835,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -881,19 +881,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['PRICE', 'BEDS', 'BATH', 'PROPERTYSQFT', 'STREET_NAME',\n",
-       "       'PROPERTY_CATEGORY', 'TYPE', 'SUBLOCALITY_ext', 'POSTCODE', 'STATE_ext',\n",
-       "       'LATITUDE', 'LONGITUDE', 'PRICE_PER_SQFT'],\n",
+       "Index(['PRICE', 'BEDS', 'BATH', 'PROPERTYSQFT', 'borough', 'PROPERTY_CATEGORY',\n",
+       "       'TYPE', 'SUBLOCALITY_ext', 'POSTCODE', 'STATE_ext', 'LATITUDE',\n",
+       "       'LONGITUDE', 'PRICE_PER_SQFT'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
        "BEDS                   int64\n",
        "BATH                 float64\n",
        "PROPERTYSQFT         float64\n",
-       "STREET_NAME           object\n",
+       "borough               object\n",
        "PROPERTY_CATEGORY     object\n",
        "TYPE                  object\n",
        "SUBLOCALITY_ext       object\n",
@@ -926,7 +926,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1008,7 @@
        "      <th>BEDS</th>\n",
        "      <th>BATH</th>\n",
        "      <th>PROPERTYSQFT</th>\n",
-       "      <th>STREET_NAME</th>\n",
+       "      <th>borough</th>\n",
        "      <th>PROPERTY_CATEGORY</th>\n",
        "      <th>TYPE</th>\n",
        "      <th>SUBLOCALITY_ext</th>\n",
@@ -1105,7 +1105,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    PRICE  BEDS  BATH  PROPERTYSQFT       STREET_NAME     PROPERTY_CATEGORY  \\\n",
+       "    PRICE  BEDS  BATH  PROPERTYSQFT           borough     PROPERTY_CATEGORY  \\\n",
        "0  315000     2   2.0   1400.000000  East 55th Street   catering.restaurant   \n",
        "2  260000     4   2.0   2015.000000     Staten Island  building.residential   \n",
        "3   69000     3   1.0    445.000000          New York          catering.bar   \n",
@@ -1127,7 +1127,7 @@
        "8      353.333333  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1166,7 @@
        "BEDS                   int64\n",
        "BATH                 float64\n",
        "PROPERTYSQFT         float64\n",
-       "STREET_NAME           object\n",
+       "borough               object\n",
        "PROPERTY_CATEGORY     object\n",
        "TYPE                  object\n",
        "SUBLOCALITY_ext       object\n",
@@ -1178,7 +1178,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1231,7 @@
        "      <th>BEDS</th>\n",
        "      <th>BATH</th>\n",
        "      <th>PROPERTYSQFT</th>\n",
-       "      <th>STREET_NAME</th>\n",
+       "      <th>borough</th>\n",
        "      <th>PROPERTY_CATEGORY</th>\n",
        "      <th>TYPE</th>\n",
        "      <th>SUBLOCALITY_ext</th>\n",
@@ -1328,7 +1328,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    PRICE  BEDS  BATH  PROPERTYSQFT       STREET_NAME     PROPERTY_CATEGORY  \\\n",
+       "    PRICE  BEDS  BATH  PROPERTYSQFT           borough     PROPERTY_CATEGORY  \\\n",
        "0  315000     2   2.0   1400.000000  East 55th Street   catering.restaurant   \n",
        "2  260000     4   2.0   2015.000000     Staten Island  building.residential   \n",
        "3   69000     3   1.0    445.000000          New York          catering.bar   \n",
@@ -1350,7 +1350,7 @@
        "8      353.333333  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
        "       'commercial;service.cleaning.dry_cleaning'], dtype=object)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1500,7 +1500,7 @@
        "[2716 rows x 2 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1544,15 +1544,12 @@
     "    return category_mapping.get(category, 'Other')\n",
     "\n",
     "# Apply the mapping\n",
-    "merged_df['CATEGORY'] = merged_df['PROPERTY_CATEGORY'].apply(map_category)\n",
-    "\n",
-    "# Display the updated DataFrame\n",
-    "merged_df[['PROPERTY_CATEGORY', 'CATEGORY']]"
+    "merged_df['PROPERTY_CATEGORY'] = merged_df['PROPERTY_CATEGORY'].apply(map_category)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1561,38 +1558,28 @@
        "array(['Commercial', 'Residential', 'Other', 'Hospitality'], dtype=object)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merged_df['CATEGORY'].unique()"
+    "merged_df['PROPERTY_CATEGORY'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# #Drop any rows with missing or unclassified values:\n",
-    "merged_df = merged_df.dropna(subset=['TYPE', 'CATEGORY'])\n"
+    "merged_df = merged_df.dropna(subset=['TYPE', 'PROPERTY_CATEGORY'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #drop propertycategory \n",
-    "del merged_df['PROPERTY_CATEGORY']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -1601,7 +1588,7 @@
        "(2716, 13)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1612,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1640,7 +1627,7 @@
        "      <th>BEDS</th>\n",
        "      <th>BATH</th>\n",
        "      <th>PROPERTYSQFT</th>\n",
-       "      <th>STREET_NAME</th>\n",
+       "      <th>borough</th>\n",
        "      <th>TYPE</th>\n",
        "      <th>SUBLOCALITY_ext</th>\n",
        "      <th>POSTCODE</th>\n",
@@ -1737,7 +1724,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    PRICE  BEDS  BATH  PROPERTYSQFT       STREET_NAME   TYPE SUBLOCALITY_ext  \\\n",
+       "    PRICE  BEDS  BATH  PROPERTYSQFT           borough   TYPE SUBLOCALITY_ext  \\\n",
        "0  315000     2   2.0   1400.000000  East 55th Street  condo       Manhattan   \n",
        "2  260000     4   2.0   2015.000000     Staten Island  house   Staten Island   \n",
        "3   69000     3   1.0    445.000000          New York  condo       Manhattan   \n",
@@ -1752,7 +1739,7 @@
        "8    10473  New York  40.821586 -73.874089      353.333333  Residential  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1763,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
