--- a/data_visualization.ipynb
+++ b/data_visualization.ipynb
@@ -2,12 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# loading libraries \n",
@@ -18,35 +14,292 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BROKERTITLE</th>\n",
+       "      <th>TYPE</th>\n",
+       "      <th>PRICE</th>\n",
+       "      <th>BEDS</th>\n",
+       "      <th>BATH</th>\n",
+       "      <th>PROPERTYSQFT</th>\n",
+       "      <th>ADDRESS</th>\n",
+       "      <th>STATE_x</th>\n",
+       "      <th>MAIN_ADDRESS</th>\n",
+       "      <th>ADMINISTRATIVE_AREA_LEVEL_2</th>\n",
+       "      <th>...</th>\n",
+       "      <th>suburb</th>\n",
+       "      <th>LONG_NAME</th>\n",
+       "      <th>FORMATTED_ADDRESS</th>\n",
+       "      <th>LATITUDE</th>\n",
+       "      <th>LONGITUDE</th>\n",
+       "      <th>STATE_y</th>\n",
+       "      <th>LOCALITY_y</th>\n",
+       "      <th>SUBLOCALITY_y</th>\n",
+       "      <th>POSTCODE</th>\n",
+       "      <th>PROPERTY_CATEGORY</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Brokered by ANNE LOPA REAL ESTATE</td>\n",
+       "      <td>House for sale</td>\n",
+       "      <td>2147483647</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>6659-6675 Amboy Rd</td>\n",
+       "      <td>New York, NY 10309</td>\n",
+       "      <td>6659-6675 Amboy RdNew York, NY 10309</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Staten Island</td>\n",
+       "      <td>Amboy Road</td>\n",
+       "      <td>6659 Amboy Rd, Staten Island, NY 10309, USA</td>\n",
+       "      <td>40.518484</td>\n",
+       "      <td>-74.224418</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>Staten Island</td>\n",
+       "      <td>10309</td>\n",
+       "      <td>building.commercial</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Brokered by ANNE LOPA REAL ESTATE</td>\n",
+       "      <td>House for sale</td>\n",
+       "      <td>2147483647</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>6659-6675 Amboy Rd</td>\n",
+       "      <td>New York, NY 10309</td>\n",
+       "      <td>6659-6675 Amboy RdNew York, NY 10309</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Staten Island</td>\n",
+       "      <td>Amboy Road</td>\n",
+       "      <td>6659 Amboy Rd, Staten Island, NY 10309, USA</td>\n",
+       "      <td>40.518484</td>\n",
+       "      <td>-74.224418</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>Staten Island</td>\n",
+       "      <td>10309</td>\n",
+       "      <td>building.commercial</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Brokered by Serhant</td>\n",
+       "      <td>Condo for sale</td>\n",
+       "      <td>195000000</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>17545.0</td>\n",
+       "      <td>Central Park Tower Penthouse-217 W 57th New Yo...</td>\n",
+       "      <td>New York, NY 10019</td>\n",
+       "      <td>Central Park Tower Penthouse-217 W 57th New Yo...</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>West 57th Street</td>\n",
+       "      <td>217 W 57th St, New York, NY 10019, USA</td>\n",
+       "      <td>40.766393</td>\n",
+       "      <td>-73.980991</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>10019</td>\n",
+       "      <td>building.residential</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Brokered by Serhant</td>\n",
+       "      <td>Condo for sale</td>\n",
+       "      <td>195000000</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>17545.0</td>\n",
+       "      <td>Central Park Tower Penthouse-217 W 57th New Yo...</td>\n",
+       "      <td>New York, NY 10019</td>\n",
+       "      <td>Central Park Tower Penthouse-217 W 57th New Yo...</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>West 57th Street</td>\n",
+       "      <td>217 W 57th St, New York, NY 10019, USA</td>\n",
+       "      <td>40.766393</td>\n",
+       "      <td>-73.980991</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>10019</td>\n",
+       "      <td>building.residential</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Brokered by Sotheby's International Realty - E...</td>\n",
+       "      <td>Townhouse for sale</td>\n",
+       "      <td>65000000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.373861</td>\n",
+       "      <td>15200.0</td>\n",
+       "      <td>4 E 79th St</td>\n",
+       "      <td>New York, NY 10075</td>\n",
+       "      <td>4 E 79th StNew York, NY 10075</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>East 79th Street</td>\n",
+       "      <td>4 E 79th St, New York, NY 10075, USA</td>\n",
+       "      <td>40.776561</td>\n",
+       "      <td>-73.963317</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>10075</td>\n",
+       "      <td>building</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         BROKERTITLE                TYPE  \\\n",
+       "0                  Brokered by ANNE LOPA REAL ESTATE      House for sale   \n",
+       "1                  Brokered by ANNE LOPA REAL ESTATE      House for sale   \n",
+       "2                                Brokered by Serhant      Condo for sale   \n",
+       "3                                Brokered by Serhant      Condo for sale   \n",
+       "4  Brokered by Sotheby's International Realty - E...  Townhouse for sale   \n",
+       "\n",
+       "        PRICE  BEDS       BATH  PROPERTYSQFT  \\\n",
+       "0  2147483647     7   6.000000       10000.0   \n",
+       "1  2147483647     7   6.000000       10000.0   \n",
+       "2   195000000     7  10.000000       17545.0   \n",
+       "3   195000000     7  10.000000       17545.0   \n",
+       "4    65000000     3   2.373861       15200.0   \n",
+       "\n",
+       "                                             ADDRESS             STATE_x  \\\n",
+       "0                                 6659-6675 Amboy Rd  New York, NY 10309   \n",
+       "1                                 6659-6675 Amboy Rd  New York, NY 10309   \n",
+       "2  Central Park Tower Penthouse-217 W 57th New Yo...  New York, NY 10019   \n",
+       "3  Central Park Tower Penthouse-217 W 57th New Yo...  New York, NY 10019   \n",
+       "4                                        4 E 79th St  New York, NY 10075   \n",
+       "\n",
+       "                                        MAIN_ADDRESS  \\\n",
+       "0               6659-6675 Amboy RdNew York, NY 10309   \n",
+       "1               6659-6675 Amboy RdNew York, NY 10309   \n",
+       "2  Central Park Tower Penthouse-217 W 57th New Yo...   \n",
+       "3  Central Park Tower Penthouse-217 W 57th New Yo...   \n",
+       "4                      4 E 79th StNew York, NY 10075   \n",
+       "\n",
+       "  ADMINISTRATIVE_AREA_LEVEL_2  ...         suburb         LONG_NAME  \\\n",
+       "0               United States  ...  Staten Island        Amboy Road   \n",
+       "1               United States  ...  Staten Island        Amboy Road   \n",
+       "2               United States  ...      Manhattan  West 57th Street   \n",
+       "3               United States  ...      Manhattan  West 57th Street   \n",
+       "4               United States  ...      Manhattan  East 79th Street   \n",
+       "\n",
+       "                             FORMATTED_ADDRESS   LATITUDE  LONGITUDE  \\\n",
+       "0  6659 Amboy Rd, Staten Island, NY 10309, USA  40.518484 -74.224418   \n",
+       "1  6659 Amboy Rd, Staten Island, NY 10309, USA  40.518484 -74.224418   \n",
+       "2       217 W 57th St, New York, NY 10019, USA  40.766393 -73.980991   \n",
+       "3       217 W 57th St, New York, NY 10019, USA  40.766393 -73.980991   \n",
+       "4         4 E 79th St, New York, NY 10075, USA  40.776561 -73.963317   \n",
+       "\n",
+       "    STATE_y  LOCALITY_y  SUBLOCALITY_y POSTCODE     PROPERTY_CATEGORY  \n",
+       "0  New York    New York  Staten Island    10309   building.commercial  \n",
+       "1  New York    New York  Staten Island    10309   building.commercial  \n",
+       "2  New York    New York      Manhattan    10019  building.residential  \n",
+       "3  New York    New York      Manhattan    10019  building.residential  \n",
+       "4  New York    New York      Manhattan    10075              building  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "#read and display data\n",
-    "df1 =pd.read_csv(\"resources/NY-House-Dataset.csv\")\n",
+    "df1 =pd.read_csv(\"resources/NY-House-Dataset_suburb.csv\")\n",
     "df2 = pd.read_csv('resources/housing_geocode_extraction.csv')\n",
-    "print(display(df1.head(5)))\n",
-    "print(display(df2.head(5)))"
+    "df1.drop_duplicates()\n",
+    "df2.drop_duplicates()\n",
+    "data = pd.merge(df1, df2, left_on=['LATITUDE', 'LONGITUDE'], right_on=['LATITUDE', 'LONGITUDE'], how='inner')\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploratory Data Analysis (EDA)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m data\u001b[38;5;241m.\u001b[39mdescribe()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "data.describe()\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
