--- a/data_visualization.ipynb
+++ b/data_visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
        "max     -73.702450    40.912729   -73.702450  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
          ],
          "xaxis": "x",
          "y": [
-          1319
+          1317
          ],
          "yaxis": "y"
         },
@@ -545,7 +545,7 @@
          ],
          "xaxis": "x",
          "y": [
-          1126
+          1124
          ],
          "yaxis": "y"
         },
@@ -1684,12 +1684,14 @@
     "                 title='Frequency of Property Types',\n",
     "                 color_discrete_sequence=px.colors.qualitative.Plotly)  # Use Plotly's qualitative color sequence\n",
     "\n",
-    "fig_bar.show()"
+    "fig_bar.show()\n",
+    "# Save the bar chart as an image file\n",
+    "fig_bar.write_image(\"./visualizations/property_type_counts.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1711,10 +1713,6 @@
          "showlegend": false,
          "type": "scattergl",
          "x": [
-          10000,
-          10000,
-          17545,
-          17545,
           15200,
           2184.207862,
           24000,
@@ -8123,10 +8121,6 @@
          ],
          "xaxis": "x",
          "y": [
-          2147483647,
-          2147483647,
-          195000000,
-          195000000,
           65000000,
           60000000,
           56000000,
@@ -15439,12 +15433,13 @@
     ")\n",
     "\n",
     "# Display the updated plot\n",
-    "fig_scatter.show()"
+    "fig_scatter.show()\n",
+    "fig_bar.write_image(\"./visualizations/price_vs_propertysize.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -29191,12 +29186,13 @@
     ")\n",
     "\n",
     "# Display the updated plot\n",
-    "fig_scatter.show()"
+    "fig_scatter.show()\n",
+    "fig_bar.write_image(\"./visualizations/property_type_counts_without_outliers.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -49374,12 +49370,13 @@
     ")\n",
     "\n",
     "# Display the updated plot\n",
-    "fig_geo.show()"
+    "fig_geo.show()\n",
+    "fig_bar.write_image(\"./visualizations/geo_distribution.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -50701,12 +50698,13 @@
     "    legend_title='Property Type'\n",
     ")\n",
     "\n",
-    "fig_stacked.show()"
+    "fig_stacked.show()\n",
+    "fig_stacked.write_image(\"./visualizations/property_vs_neighbourhoods.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -77227,7 +77225,8 @@
     ")\n",
     "\n",
     "fig_splom.update_traces(diagonal_visible=False)  # Remove the histograms on the diagonal\n",
-    "fig_splom.show()"
+    "fig_splom.show()\n",
+    "fig_splom.write_image(\"./visualizations/splom_real_estate_data.png\")"
    ]
   }
  ],
