--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "4  40.767224 -73.969856  "
       ]
      },
-     "execution_count": 173,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "4              building  "
       ]
      },
-     "execution_count": 174,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
        "max     -73.702450  "
       ]
      },
-     "execution_count": 217,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
        "(4200, 11)"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
        "4  Townhouse for sale       manhattan    10065  new york  40.767224 -73.969856  "
       ]
      },
-     "execution_count": 223,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +930,7 @@
        "4       manhattan    10065  new york  40.767224 -73.969856     3880.070547  "
       ]
      },
-     "execution_count": 224,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,18 +947,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 186,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Standardize column names\n",
-    "# merged_df.columns = merged_df.columns.str.lower().str.replace(' ', '_')\n",
-    "# #check changes\n",
-    "# merged_df.columns"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -967,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +983,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1026,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1058,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1236,7 @@
        "8       the bronx    10473  new york  40.821586 -73.874089      353.333333  "
       ]
      },
-     "execution_count": 231,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1277,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1286,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1320,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1453,7 @@
        "8       The Bronx    10473  New York  40.821586 -73.874089      353.333333  "
       ]
      },
-     "execution_count": 197,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1476,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1498,7 +1486,7 @@
        "       'commercial;service.cleaning.dry_cleaning'], dtype=object)"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1509,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1603,13 +1591,12 @@
        "[2716 rows x 1 columns]"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Define mapping to major categories\n",
     "# Define mapping to major categories\n",
     "category_mapping = {\n",
     "    'building.residential': 'Residential',\n",
@@ -1655,7 +1642,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Commercial', 'Residential', 'Other', 'Hospitality'], dtype=object)"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df['PROPERTY_CATEGORY'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1665,118 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Dictionary to map Sublocalities to Boroughs\n",
-    "# sublocality_by_borough = {\n",
-    "#     'Upper East Side': 'Manhattan', 'Tribeca': 'Manhattan', 'Central Harlem': 'Manhattan', 'East Village': 'Manhattan',\n",
-    "#     'Greenwich Village': 'Manhattan', 'Midtown East': 'Manhattan', 'Midtown West': 'Manhattan', 'Gramercy': 'Manhattan',\n",
-    "#     'West Village': 'Manhattan', 'SoHo': 'Manhattan', 'Financial District': 'Manhattan',\n",
-    "#     'Bedford-Stuyvesant': 'Brooklyn', 'Bayridge': 'Brooklyn', 'Brighton Beach': 'Brooklyn', 'Canarsie': 'Brooklyn',\n",
-    "#     'Bushwick': 'Brooklyn', 'Sunset Park': 'Brooklyn', 'Williamsburg': 'Brooklyn', 'Park Slope': 'Brooklyn',\n",
-    "#     'Dyker Heights': 'Brooklyn', 'Gerritsen Beach': 'Brooklyn', 'Kensington': 'Brooklyn', 'Gravesend': 'Brooklyn',\n",
-    "#     'Marine Park': 'Brooklyn', 'East New York': 'Brooklyn', 'Cobble Hill': 'Brooklyn', 'Fort Hamilton': 'Brooklyn',\n",
-    "#     'Astoria': 'Queens', 'Flushing': 'Queens', 'Jackson Heights': 'Queens', 'Howard Beach': 'Queens',\n",
-    "#     'Ozone Park': 'Queens', 'Rego Park': 'Queens', 'Bayside': 'Queens', 'Fresh Meadows': 'Queens',\n",
-    "#     'Glen Oaks': 'Queens', 'College Point': 'Queens', 'Whitestone': 'Queens', 'Douglaston': 'Queens',\n",
-    "#     'Kew Gardens': 'Queens', 'Kew Gardens Hills': 'Queens', 'Briarwood': 'Queens', 'Maspeth': 'Queens',\n",
-    "#     'Riverdale': 'The Bronx', 'Kingsbridge': 'The Bronx', 'Wakefield': 'The Bronx', 'Concourse Village': 'The Bronx',\n",
-    "#     'Parkchester': 'The Bronx', 'Hamilton Heights': 'The Bronx', 'Clason Point': 'The Bronx', 'Norwood': 'The Bronx',\n",
-    "#     'Howland Hook': 'Staten Island', 'Silver Lake': 'Staten Island', \"Prince's Bay\": 'Staten Island', 'New Springville': 'Staten Island',\n",
-    "#     'Oakwood': 'Staten Island', 'Huguenot': 'Staten Island', 'Richmond County': 'Staten Island', 'Emerson Hill': 'Staten Island',\n",
-    "#     'South Beach': 'Staten Island', 'Rossville': 'Staten Island'\n",
-    "# }\n",
-    "# # Clean the 'SUBLOCALITY_ext' column by stripping extra spaces and normalizing case\n",
-    "# merged_df['SUBLOCALITY_ext'] = merged_df['SUBLOCALITY_ext'].str.strip().str.title()\n",
-    "\n",
-    "\n",
-    "# # Apply the mapping\n",
-    "# merged_df['Borough'] = merged_df['SUBLOCALITY_ext'].map(sublocality_by_borough)\n",
-    "\n",
-    "# # Fill NaN values (in case any sublocalities were not found in the mapping)\n",
-    "# merged_df['Borough'] = merged_df['Borough'].fillna('Unknown')\n",
-    "\n",
-    "# # Check the result\n",
-    "# print(merged_df[['SUBLOCALITY_ext', 'Borough']].head())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 202,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# # Dictionary of neighborhoods by borough\n",
-    "# neighborhoods_by_borough = {\n",
-    "#     'Manhattan': [\n",
-    "#         'Upper East Side', 'Tribeca', 'Central Harlem', 'East Village',\n",
-    "#         'Greenwich Village', 'Midtown East', 'Midtown West', 'Gramercy',\n",
-    "#         'West Village', 'SoHo', 'Financial District'\n",
-    "#     ],\n",
-    "#     'Brooklyn': [\n",
-    "#         'Bedford-Stuyvesant', 'Bayridge', 'Brighton Beach', 'Canarsie',\n",
-    "#         'Bushwick', 'Sunset Park', 'Williamsburg', 'Park Slope',\n",
-    "#         'Dyker Heights', 'Gerritsen Beach', 'Kensington', 'Gravesend',\n",
-    "#         'Marine Park', 'East New York', 'Cobble Hill', 'Fort Hamilton'\n",
-    "#     ],\n",
-    "#     'Queens': [\n",
-    "#         'Astoria', 'Flushing', 'Jackson Heights', 'Howard Beach',\n",
-    "#         'Ozone Park', 'Rego Park', 'Bayside', 'Fresh Meadows',\n",
-    "#         'Glen Oaks', 'College Point', 'Whitestone', 'Douglaston',\n",
-    "#         'Kew Gardens', 'Kew Gardens Hills', 'Briarwood', 'Maspeth'\n",
-    "#     ],\n",
-    "#     'The Bronx': [\n",
-    "#         'Riverdale', 'Kingsbridge', 'Wakefield', 'Concourse Village',\n",
-    "#         'Parkchester', 'Hamilton Heights', 'Clason Point', 'Norwood'\n",
-    "#     ],\n",
-    "#     'Staten Island': [\n",
-    "#         'Howland Hook', 'Silver Lake', \"Prince's Bay\", 'New Springville',\n",
-    "#         'Oakwood', 'Huguenot', 'Richmond County', 'Emerson Hill',\n",
-    "#         'South Beach', 'Rossville'\n",
-    "#     ]\n",
-    "# }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 203,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Function to categorize sublocations and add a new 'Borough' column to the DataFrame\n",
-    "# def categorize_sublocations(df):\n",
-    "#     # Initialize the dictionary to categorize sublocations by borough\n",
-    "#     categorized = {borough: [] for borough in neighborhoods_by_borough.keys()}\n",
-    "#     categorized['Unknown'] = []  # To store sublocations that are not found in any borough\n",
-    "\n",
-    "#     # Create a new column in the DataFrame for the borough\n",
-    "#     df['Borough'] = df['SUBLOCALITY_ext'].apply(lambda sublocation: find_borough(sublocation, neighborhoods_by_borough))\n",
-    "\n",
-    "#     return df\n",
-    "\n",
-    "# # Helper function to find the borough for a given sublocation\n",
-    "# def find_borough(sublocation, neighborhoods_by_borough):\n",
-    "#     for borough, neighborhoods in neighborhoods_by_borough.items():\n",
-    "#         if sublocation in neighborhoods:\n",
-    "#             return borough\n",
-    "#     return 'Unknown'  # If the sublocation is not found in any borough\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 204,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df = categorize_sublocations(merged_df)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1786,7 +1682,7 @@
        "       'Queens County', 'Richmond County'], dtype=object)"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1797,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1818,7 +1714,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1834,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1968,7 +1864,7 @@
        "8    10473  New York  40.821586 -73.874089      353.333333  "
       ]
      },
-     "execution_count": 213,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1979,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -2000,7 +1896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -2045,7 +1941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -2185,7 +2081,7 @@
        "max     -73.703904     1201.005025  "
       ]
      },
-     "execution_count": 241,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
