--- a/data_visualization.ipynb
+++ b/data_visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
        "max     -73.702450    40.912729   -73.702450  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
          ],
          "xaxis": "x",
          "y": [
-          1317
+          1319
          ],
          "yaxis": "y"
         },
@@ -545,7 +545,7 @@
          ],
          "xaxis": "x",
          "y": [
-          1124
+          1126
          ],
          "yaxis": "y"
         },
@@ -1691,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1713,6 +1713,10 @@
          "showlegend": false,
          "type": "scattergl",
          "x": [
+          10000,
+          10000,
+          17545,
+          17545,
           15200,
           2184.207862,
           24000,
@@ -8121,6 +8125,10 @@
          ],
          "xaxis": "x",
          "y": [
+          2147483647,
+          2147483647,
+          195000000,
+          195000000,
           65000000,
           60000000,
           56000000,
@@ -15434,12 +15442,12 @@
     "\n",
     "# Display the updated plot\n",
     "fig_scatter.show()\n",
-    "fig_bar.write_image(\"./visualizations/price_vs_propertysize.png\")"
+    "fig_scatter.write_image(\"./visualizations/price_vs_propertysize.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -29153,7 +29161,7 @@
     "data = data[data['PRICE'] < 150000000]\n",
     "\n",
     "    # Scatter plot for Price vs. Property Size with design enhancements\n",
-    "fig_scatter = px.scatter(data, x='PROPERTYSQFT', y='PRICE', title='Price vs. Property Size')\n",
+    "fig_scatter = px.scatter(data, x='PROPERTYSQFT', y='PRICE', title='Price vs. Property Size (without_outliers)')\n",
     "\n",
     "\n",
     "# Update layout for a better visual design\n",
@@ -29187,12 +29195,12 @@
     "\n",
     "# Display the updated plot\n",
     "fig_scatter.show()\n",
-    "fig_bar.write_image(\"./visualizations/property_type_counts_without_outliers.png\")"
+    "fig_scatter.write_image(\"./visualizations/property_type_counts_without_outliers.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -49371,12 +49379,12 @@
     "\n",
     "# Display the updated plot\n",
     "fig_geo.show()\n",
-    "fig_bar.write_image(\"./visualizations/geo_distribution.png\")"
+    "fig_geo.write_image(\"./visualizations/geo_distribution.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -50704,7 +50712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
