--- a/data_Classification.ipynb
+++ b/data_Classification.ipynb
@@ -224,12 +224,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 4. Prepare features and target variable again\n",
-    "X = df.drop(columns=['STATE_ext', 'LATITUDE', 'LONGITUDE'])  \n",
+    "X = df.drop(columns=['STATE_ext', 'LATITUDE', 'LONGITUDE','SQFT_CATEGORY','PROPERTYSQFT'])  \n",
     "y = df['SQFT_CATEGORY']  # Use 'SQFT_CATEGORY' as the target variable\n"
    ]
   },
